[package]
name = "liquidity-timelock"
version = "0.1.0"
edition = "2021"
description = "Liquidity Timelock is a Smart Contract that will hold and lock Soroswap Liquidity pool tokens for a certain amount of time."
homepage = "https://github.com/soroswap/utility-contracts"
repository = "https://github.com/soroswap/utility-contracts"
authors = ["coderipper <joaquin@paltalabs.io>, esteblock"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true

[lib]
crate-type = ["cdylib"] 

[dependencies]
soroban-sdk = "21.0.1-preview.3"

[dev-dependencies]
soroban-sdk = { version = "21.0.1-preview.3", features = ["testutils"] }
chrono = "0.4"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
